--- a/resources/quality/lulzbot_mini_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_mini_lutefisk.inst.cfg
+++ b/resources/quality/lulzbot_mini_lutefisk/Pro_PLA_(3D_Fuel)_High_Speed_mini_lutefisk.inst.cfg
@@ -4,7 +4,7 @@ name = High Detail
 definition = lulzbot_mini_lutefisk
 
 [metadata]
-material = Pro_PLA_(3D Fuel)_1.75_lulzbot_mini_lutefisk
+material = Pro_PLA_(3D-Fuel)_1.75_lulzbot_mini_lutefisk
 type = quality
 quality_type = high quality
 setting_version = 4
